# netmind-web3-mcp

./: .gitignore  ARCHITECTURE.md  Dockerfile  PROMPT.md  README.md  env.example  pyproject.toml
src/netmind-web3-mcp/: server.py
src/netmind_web3_mcp/: __init__.py  server.py
src/netmind_web3_mcp/tools/: __init__.py
src/netmind_web3_mcp/tools/backend/: __init__.py  config.py  investment.py  news.py  token_address.py
src/netmind_web3_mcp/tools/coingecko/: __init__.py  config.py  market_data.py
src/netmind_web3_mcp/tools/report/: __init__.py  report.py
src/netmind_web3_mcp/tools/sugar/: __init__.py  cache.py  config.py  models.py  pools.py  quotes.py  tokens.py
src/netmind_web3_mcp/utils/: __init__.py  auth.py  env_loader.py
test/: README.md  generate_token.py  test.py  test_local_stdio.py  test_mcp_inspector.py  test_sse.py
